--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,12 @@
   .active {
     @apply text-[#29ff29];
   }
+
+
+}
+
+@layer utilities {
+  .shadow-box-glass {
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+  }
 }
