--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,23 @@
     @apply text-[#29ff29];
   }
 
-
 }
 
 @layer utilities {
+.effect-glass {
+    @apply bg-slate-200/50 backdrop-blur-sm
+}
+
   .shadow-box-glass {
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+  }
+
+  .shadow-box-light {
+    box-shadow: 0px 0px 10px 2px rgba(255, 255, 255, 0.5), 0px 0px 15px 4px rgba(255, 255, 255, 0.5), 0px 0px 20px 4px rgba(255, 255, 255, 0.5), 0px 0px 25px 4px rgba(255, 255, 255, 0.5);
+  }
+
+  .vertikal-text {
+    writing-mode: vertical-rl;
+    text-orientation: upright; 
   }
 }
